--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "1.1.0",
   "description": "Expand a string pattern into a list of strings using sequence or enum tokens.",
   "main": "index.js",
+  "dependencies": {
+    "lodash": "^4.17.4"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2"
+  },
   "scripts": {
     "test": "node test.js"
   },
@@ -21,9 +27,5 @@
   "bugs": {
     "url": "https://github.com/felds/str-expand/issues"
   },
-  "homepage": "https://github.com/felds/str-expand#readme",
-  "devDependencies": {
-    "expect": "^1.20.2",
-    "lodash": "^4.17.4"
-  }
+  "homepage": "https://github.com/felds/str-expand#readme"
 }
