--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.2.1",
   "description": "Expand a string pattern into a list of strings using sequence or enum tokens.",
   "main": "index.js",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "lodash": "^4.17.21"
   },
